# hsopenid

./: openid.cabal
examples/: Makefile  easy.hs  test.hs
src/: DiffieHellman.hsc
src/Codec/Binary/: Base64.hs  SHA.hsc
src/Codec/Encryption/: DH.hsc
src/Data/Digest/OpenSSL/: AlternativeHMAC.hsc  SHA.hs
src/Network/: OpenID.hs  SSL.hs
src/Network/OpenID/: .Association.hs.swp  Association.hs  AssociationManager.hs  AttributeExchange.hs  Authentication.hs  Discovery.hs  Easy.hs  HTTP.hs  Normalization.hs  Response.hs  SSL.hs  Types.hs  Utils.hs
src/Network/OpenID/Association/: Manager.hs  Map.hs
src/Text/: XRDS.hs
