name:               openid
version:            0.1
cabal-version:      >= 1.2
synopsis:           An implementation of the OpenID-2.0 spec.
description:        An implementation of the OpenID-2.0 spec.
category:           Network
author:             Trevor Elliott
maintainer:         trevor@geekgateway.com
copyright:          (c) 2008. Trevor Elliott <trevor@geekgateway.com>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 6.8.2


flag split-base
  default:     True
  description: Use the new split base package.

library
  if flag(split-base)
    build-depends: base >= 3, bytestring, containers
  else
    build-depends: base < 3
  build-depends:   HTTP, monadLib, nano-hmac, network, time, xml
  hs-source-dirs:  src
  exposed-modules: Network.OpenID,
                   Network.SSL,
                   Codec.Binary.Base64,
                   Codec.Encryption.DH,
                   Data.Digest.OpenSSL.SHA,
                   Text.XRDS
  other-modules:   Network.OpenID.Association,
                   Network.OpenID.Association.Manager,
                   Network.OpenID.Association.Map,
                   Network.OpenID.Authentication,
                   Network.OpenID.Discovery,
                   Network.OpenID.HTTP,
                   Network.OpenID.Normalization,
                   Network.OpenID.Types,
                   Network.OpenID.Utils
  ghc-options:     -W
  extensions:      EmptyDataDecls,
                   FlexibleContexts,
                   ForeignFunctionInterface
  extra-libraries: crypto, ssl
