name:               openid
version:            0.2.0.0
cabal-version:      >= 1.8
synopsis:           An implementation of the OpenID-2.0 spec.
description:        An implementation of the OpenID-2.0 spec.
category:           Network
author:             Trevor Elliott
homepage:           http://github.com/elliottt/hsopenid
maintainer:         trevor@geekgateway.com
copyright:          (c) 2008. Trevor Elliott <trevor@geekgateway.com>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 6.12.1
extra-source-files: examples/Makefile, examples/test.hs examples/easy.hs

flag examples
  default:     False
  description: Build an example program

flag split-base
  default:     True
  description: Use the new split base package.

source-repository head
  type:            git
  location:        git://github.com/elliottt/hsopenid.git

library
  if flag(split-base)
    build-depends: base       >= 3 && < 10,
                   bytestring == 0.9.1.*,
                   containers >= 0.2 && < 0.4
  else
    build-depends: base < 3
  build-depends:   HTTP      >= 4000.0.9 && < 4000.2,
                   monadLib  == 3.6.*,
                   network   == 2.2.*,
                   time      == 1.1.*,
                   xml       == 1.3.*,
                   HsOpenSSL >= 0.9 && < 1.0
  hs-source-dirs:  src
  exposed-modules: Codec.Binary.Base64,
                   Codec.Encryption.DH,
                   Data.Digest.OpenSSL.AlternativeHMAC,
                   Data.Digest.OpenSSL.SHA,
                   Network.OpenID,
                   Network.OpenID.Association,
                   Network.OpenID.Association.Manager,
                   Network.OpenID.Association.Map,
                   Network.OpenID.AttributeExchange,
                   Network.OpenID.Authentication,
                   Network.OpenID.Discovery,
                   Network.OpenID.HTTP,
                   Network.OpenID.Normalization,
                   Network.OpenID.SSL
                   Network.OpenID.Types,
                   Network.OpenID.Utils,
                   Text.XRDS
  ghc-options:     -W
  extensions:      EmptyDataDecls,
                   FlexibleContexts,
                   FlexibleInstances,
                   ForeignFunctionInterface,
                   GeneralizedNewtypeDeriving,
                   MultiParamTypeClasses

executable openid-test
  main-is:         examples/test.hs

  if flag(examples)
    buildable:     True
    build-depends: base, openid, monadLib, network, HsOpenSSL

  else
    buildable:     False
